# euclid-contract

./: README.md  cabal.project  euclid-validator.cabal
app/: EuclidContract.hs
contractdata/: bet.json  bet2.json  euclid.plutus  gdcValues.json  gdcValues2.json  gdcValues3.json
scripts/: deploy.sh  unlock.sh
test/: test.hs
