cabal-version:      3.6
name:               euclid-validator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             AgustinBadi
maintainer:         helloworld@ashdev.space

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


common common-all
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities
                    , QuickCheck
                    , tasty
                    , tasty-quickcheck
                    , plutus-simple-model
                    , mtl

    default-language: Haskell2010

-- TODO: should we put all extensions in the file to make it explicit we're using them?
    --default-extensions: NoImplicitPrelude
                        --OverloadedStrings
                        --TypeApplications
                        --ImportQualifiedPost
                        --BangPatterns
                        --LambdaCase
                        --ScopedTypeVariables


    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors


executable euclid-contract
    import:           common-all
    main-is:          EuclidContract.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app 
    default-language: Haskell2010
    ghc-options:      -main-is EuclidContract
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:


test-suite euclid-testing
    import:             common-all
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test, app
    other-modules:      EuclidContract



